# fuckBilibili

./: README.md  package-lock.json  package.json  vite.config.js
back/: .gitignore  fuckbilibili.bat  main.py  requirements.txt  ui.py  ui_style.css
back/db/: __init__.py  db.py
back/spider/: __init__.py  asyncQuery.py  bv2mid.py
script/: 1.js
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  server.rs  spider.rs  state.rs
